Add Parse button to CSVScrobbleView
Also a cleanup

--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/CSVScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/CSVScrobbleView.xaml
@@ -41,6 +41,8 @@
       <ColumnDefinition Width="Auto"/>
       <ColumnDefinition Width="5"/>
       <ColumnDefinition Width="Auto"/>
+      <ColumnDefinition Width="5"/>
+      <ColumnDefinition Width="Auto"/>
     </Grid.ColumnDefinitions>
 
     <Label Grid.Row="0" Grid.Column="0" Content="CSV File:"/>
@@ -52,7 +54,14 @@
         </i:EventTrigger>
       </i:Interaction.Triggers>
     </Button>
-    <Button Grid.Row="0" Grid.Column="6" Content="Settings">
+    <Button Grid.Row="0" Grid.Column="6" Content="Parse" IsEnabled="{Binding CanParse}">
+      <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Click">
+          <cal:ActionMessage MethodName="ParseCSVFile"/>
+        </i:EventTrigger>
+      </i:Interaction.Triggers>
+    </Button>
+    <Button Grid.Row="0" Grid.Column="8" Content="Settings">
       <i:Interaction.Triggers>
         <i:EventTrigger EventName="Click">
           <cal:ActionMessage MethodName="OpenCSVParserSettings"/>
@@ -60,17 +69,9 @@
       </i:Interaction.Triggers>
     </Button>
 
-    <Grid Grid.Row="2" Grid.ColumnSpan="7">
-      <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="Auto"/>
-        <ColumnDefinition Width="5"/>
-        <ColumnDefinition Width="Auto"/>
-      </Grid.ColumnDefinitions>
+    <local:SelectScrobblesControl Grid.Row="2" Grid.ColumnSpan="9"/>
 
-      <local:SelectScrobblesControl Grid.Column="0" Grid.ColumnSpan="5"/>
-    </Grid>
-
-    <ListView Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="7" ItemsSource="{Binding Scrobbles}" local:GridViewSort.AutoSort="True">
+    <ListView Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="9" ItemsSource="{Binding Scrobbles}" local:GridViewSort.AutoSort="True">
       <ListView.View>
         <GridView>
           <GridViewColumn Header="Scrobble?" local:GridViewSort.PropertyName="ToScrobble">
@@ -112,7 +113,7 @@
       </ListView.View>
     </ListView>
 
-    <Grid Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="7">
+    <Grid Grid.Row="6" Grid.Column="0" Grid.ColumnSpan="9">
       <Grid.RowDefinitions>
         <RowDefinition Height="Auto"/>
         <RowDefinition Height="5"/>
