--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/ManualScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/ManualScrobbleView.xaml
@@ -3,8 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
-             xmlns:cal="http://www.caliburnproject.org"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              xmlns:viewModels="clr-namespace:Last.fm_Scrubbler_WPF.ViewModels"
              xmlns:local="clr-namespace:Last.fm_Scrubbler_WPF.Views"
@@ -12,6 +10,10 @@
              d:DesignHeight="300" d:DesignWidth="300">
   <Grid>
     <Grid.RowDefinitions>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="5"/>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="5"/>
       <RowDefinition Height="Auto"/>
       <RowDefinition Height="5"/>
       <RowDefinition Height="Auto"/>
@@ -37,13 +39,19 @@
     <TextBox Grid.Row="2" Grid.Column="2" Grid.ColumnSpan="3" Text="{Binding Track, UpdateSourceTrigger=PropertyChanged}"/>
 
     <Label Grid.Row="4" Grid.Column="0" Content="Album:"/>
-    <TextBox Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3" Text="{Binding Album, UpdateSourceTrigger=PropertyChanged}"/>
+    <TextBox Grid.Row="4" Grid.Column="2" Grid.ColumnSpan="3" Text="{Binding Album}"/>
 
-    <Label Grid.Row="6" Grid.Column="0" Content="Time Played:"/>
-    <xctk:DateTimePicker Grid.Row="6" Grid.Column="2" Value="{Binding TimePlayed}" Minimum="{Binding Source={x:Static viewModels:MainViewModel.MinimumDateTime}}"/>
-    <CheckBox Grid.Row="6" Grid.Column="4" Content="Current" IsChecked="{Binding CurrentDateTime}"
+    <Label Grid.Row="6" Grid.Column="0" Content="Album Artist:"/>
+    <TextBox Grid.Row="6" Grid.Column="2" Grid.ColumnSpan="3" Text="{Binding AlbumArtist}"/>
+
+    <Label Grid.Row="8" Grid.Column="0" Content="Duration (hh:mm:ss):"/>
+    <xctk:TimeSpanUpDown Grid.Row="8" Grid.Column="2" Grid.ColumnSpan="3" Value="{Binding Duration}" Minimum="0" />
+
+    <Label Grid.Row="10" Grid.Column="0" Content="Time Played:"/>
+    <xctk:DateTimePicker Grid.Row="10" Grid.Column="2" Value="{Binding TimePlayed}" Minimum="{Binding Source={x:Static viewModels:MainViewModel.MinimumDateTime}}"/>
+    <CheckBox Grid.Row="10" Grid.Column="4" Content="Current" IsChecked="{Binding CurrentDateTime}"
                     VerticalAlignment="Center"/>
 
-    <local:ScrobbleButtonControl Grid.Row="8" Grid.Column="0" Grid.ColumnSpan="5"/>
+    <local:ScrobbleButtonControl Grid.Row="12" Grid.Column="0" Grid.ColumnSpan="5"/>
   </Grid>
 </UserControl>
