--- a/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/ITunesScrobbleView.xaml
+++ b/Last.fm-Scrubbler-WPF/Views/ScrobbleViews/ITunesScrobbleView.xaml
@@ -103,11 +103,81 @@
         </Image>
       </Border>
 
-      <StackPanel Grid.Row="0" Grid.Column="2">
-        <Label Content="{Binding CurrentTrackName}"/>
-        <Label Content="{Binding CurrentArtistName}"/>
-        <Label Content="{Binding CurrentAlbumName}"/>
-      </StackPanel>
+      <Grid Grid.Row="0" Grid.Column="2">
+        <Grid.RowDefinitions>
+          <RowDefinition Height="Auto"/>
+          <RowDefinition Height="5"/>
+          <RowDefinition Height="Auto"/>
+          <RowDefinition Height="5"/>
+          <RowDefinition Height="Auto"/>
+          <RowDefinition Height="5"/>
+          <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+          <ColumnDefinition Width="Auto"/>
+          <ColumnDefinition Width="5"/>
+          <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Label Grid.Row="0" Grid.Column="0" Content="Track:" FontWeight="Bold"/>
+        <TextBlock Grid.Row="0" Grid.Column="2" Margin="0,5,0,0">
+          <Hyperlink>
+            <TextBlock Text="{Binding CurrentTrackName, Mode=OneWay}">
+              <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDown">
+                  <cal:ActionMessage MethodName="TrackClicked"/>
+                </i:EventTrigger>
+              </i:Interaction.Triggers>
+            </TextBlock>
+          </Hyperlink>
+        </TextBlock>
+
+        <Label Grid.Row="2" Grid.Column="0" Content="Artist:" FontWeight="Bold"/>
+        <TextBlock Grid.Row="2" Grid.Column="2" Margin="0,5,0,0">
+          <Hyperlink>
+            <TextBlock Text="{Binding CurrentArtistName, Mode=OneWay}">
+              <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDown">
+                  <cal:ActionMessage MethodName="ArtistClicked"/>
+                </i:EventTrigger>
+              </i:Interaction.Triggers>
+            </TextBlock>
+          </Hyperlink>
+        </TextBlock>
+
+        <Label Grid.Row="4" Grid.Column="0" Content="Album:" FontWeight="Bold"/>
+        <TextBlock Grid.Row="4" Grid.Column="2" Margin="0,5,0,0">
+          <Hyperlink>
+            <TextBlock Text="{Binding CurrentAlbumName, Mode=OneWay}">
+              <i:Interaction.Triggers>
+                <i:EventTrigger EventName="MouseDown">
+                  <cal:ActionMessage MethodName="AlbumClicked"/>
+                </i:EventTrigger>
+              </i:Interaction.Triggers>
+            </TextBlock>
+          </Hyperlink>
+        </TextBlock>
+
+        <Separator Grid.Row="5" Grid.Column="0" Grid.ColumnSpan="3"/>
+
+        <Button Grid.Row="6" Grid.Column="0">
+          <Button.Style>
+            <Style TargetType="Button">
+              <Setter Property="Content" Value="Love"/>
+              <Style.Triggers>
+                <DataTrigger Binding="{Binding CurrentTrackLoved}" Value="True">
+                  <Setter Property="Content" Value="Unlove"/>
+                </DataTrigger>
+              </Style.Triggers>
+            </Style>
+          </Button.Style>
+          <i:Interaction.Triggers>
+            <i:EventTrigger EventName="Click">
+              <cal:ActionMessage MethodName="SwitchLoveState"/>
+            </i:EventTrigger>
+          </i:Interaction.Triggers>
+        </Button>
+      </Grid>
 
       <Separator Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3"/>
 
